--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,31 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+
+
 
 android {
     compileSdkVersion 28
+
+    testOptions {
+
+      unitTests.all {
+                testLogging {
+                    events "passed", "skipped", "failed", "standardOut", "standardError"
+                    outputs.upToDateWhen { false }
+                    showStandardStreams = true
+                }
+            }
+        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources = true
+
+    }
     defaultConfig {
-        applicationId "c.ponom.locator"
+        applicationId "c.ponom.pocketlibrary"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
@@ -24,29 +40,72 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:customtabs:28.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    testImplementation "org.robolectric:robolectric:4.0.2"
+    testImplementation 'androidx.test:core:1.2.0'
+
+// AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+// Espresso Assertions
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+    androidTestImplementation 'com.google.truth:truth:0.44'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    testImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'com.android.support.test:testing-support-lib:0.1'
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.0') {
+        exclude module: 'support-annotations'
+    }
+    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
+
+
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+
+    // Optional -- Mockito framework
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+
+    implementation 'com.google.firebase:firebase-analytics:17.0.1'
+
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.browser:browser:1.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+    testImplementation 'junit:junit:4.12'
+
+
+    implementation 'androidx.room:room-runtime:2.1.0'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'org.jsoup:jsoup:1.8.3'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
