--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="c.ponom.pocketlibrary">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,16 +8,17 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_big"
-        android:label="PocketBook"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_big_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-    <activity android:name="c.ponom.pocketlibrary.View.MainActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name="c.ponom.pocketlibrary.View.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    </application>/>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
 </manifest>
