--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,17 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.0'  // Google Services plugin
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        // Add dependency
+       // classpath 'io.fabric.tools:gradle:1.31.0'  // Crashlytics plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
