--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,12 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
 
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
+    implementation 'com.google.dagger:dagger:2.15'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.15'
+    implementation 'com.google.dagger:dagger-android:2.15'
 
+    implementation 'org.glassfish:javax.annotation:10.0-b28'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
