--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
 
 
     <application
-        android:allowBackup="true"
-        android:name=".DI.App"
+        android:allowBackup="false"
+        android:name=".di.App"
         android:icon="@mipmap/ic_launcher_big"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_big_round"
