--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,43 +1,36 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 
 
-
+}
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
-    testOptions {
 
-      unitTests.all {
-                testLogging {
-                    events "passed", "skipped", "failed", "standardOut", "standardError"
-                    outputs.upToDateWhen { false }
-                    showStandardStreams = true
-                }
-            }
-        unitTests.returnDefaultValues = true
-        unitTests.includeAndroidResources = true
-
-    }
     defaultConfig {
         applicationId "c.ponom.pocketlibrary"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 29
+        versionCode 2
+        versionName "2.0"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
-        dataBinding {
-            enabled = true
+        android {
+            compileOptions {
+                sourceCompatibility 1.8
+                targetCompatibility 1.8
+            }
         }
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
@@ -51,59 +44,30 @@ android {
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation "org.robolectric:robolectric:4.2.1"
-    testImplementation 'androidx.test:core:1.2.0'
-
-// AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-// Espresso Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.ext:truth:1.2.0'
-    androidTestImplementation 'com.google.truth:truth:0.44'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'androidx.test:core:1.2.0'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testImplementation 'org.mockito:mockito-core:1.10.19'
-    androidTestImplementation 'com.android.support.test:testing-support-lib:0.1'
-    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.0') {
-        exclude module: 'support-annotations'
-    }
-    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    androidTestUtil 'androidx.test:orchestrator:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.firebase:firebase-core:18.0.2'
 
-
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-
-    implementation 'com.google.firebase:firebase-core:17.2.0'
-
-    // Optional -- Mockito framework
-    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+   //implementation 'com.google.firebase:firebase-analytics:17.2.0'
 
     implementation 'org.glassfish:javax.annotation:10.0-b28'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.browser:browser:1.0.0'
-    implementation 'com.google.firebase:firebase-core:17.2.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.google.firebase:firebase-core:18.0.2'
 
-
-    implementation 'androidx.room:room-runtime:2.1.0'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0'
+    implementation 'androidx.room:room-runtime:2.2.6'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.android.material:material:1.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'org.jsoup:jsoup:1.8.3'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //implementation 'com.google.android.material:material:1.3.0'
 
 }
