--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
     <application
         android:allowBackup="false"
         android:name=".di.App"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher_big"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_big_round"
         android:supportsRtl="true"
-         android:theme="@style/AppTheme">
+         android:theme="@style/AppTheme"
+        tools:ignore="UnusedAttribute">
         <activity android:name="c.ponom.pocketlibrary.ui.SingleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
