v 2.0 - надо решить проблемы инд.удаления загруженных файлов, первичной сбойной  загрузки без интернета, и кавычек в имени файлов

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:supportsRtl="true"
          android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
-        <activity android:name="c.ponom.pocketlibrary.ui.SingleActivity">
+        <activity android:name="c.ponom.pocketlibrary.ui.SingleActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
