--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ plugins {
 
 }
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
 
 
     defaultConfig {
         applicationId "c.ponom.pocketlibrary"
 
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 3
         versionName "3.0"
         javaCompileOptions {
@@ -57,7 +57,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.firebase:firebase-core:18.0.2'
-
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.4.1'
     implementation 'androidx.room:room-runtime:2.2.6'
     implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
